@@ -16,7 +16,6 @@
  */
 package org.acme.timer.log;
 
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.concurrent.TimeUnit;
@@ -37,8 +36,8 @@ public class TimerLogTest {
         String greeting = config.getValue("greeting.message", String.class);
 
         await().atMost(10L, TimeUnit.SECONDS).pollDelay(1, TimeUnit.SECONDS).until(() -> {
-            String log = new String(Files.readAllBytes(Paths.get("target/quarkus.log")), StandardCharsets.UTF_8);
-            return log.contains("Java DSL: " + greeting) && log.contains("XML DSL: " + greeting);
+            String log = Files.readString(Paths.get("target/quarkus.log"));
+            return log.contains("Java DSL: " + greeting) && log.contains("YAML DSL: " + greeting);
         });
     }
 }
